# cpp-plugin-system

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.bak  cppPlugins
.deps/: Application.Po  CommunicativeObject.Po  ConcretePluginManager.Po  Plugin.Po  m.Po  main.Po
Plugins/ExtensionLoader/: ExtensionLoader.plg  Makefile  config.status
Plugins/LuaScriptingPlugin/: LuaScriptingPlugin.plg  Makefile  config.status
Plugins/LuaScriptingPlugin/autom4te.cache/: requests
Plugins/TestPlugin/: Makefile  Makefile.in  TestPlugin.plg  config.status  configure  configure.ac
Plugins/TestPlugin/autom4te.cache/: output.0  requests  traces.0  traces.1
Plugins/TestPlugin/src/: TestPlugin.cpp
Plugins/TestPlugin/src/.deps/: TestPlugin.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: main.cpp
src/api/: IApplication.hpp  Plugin.cpp  Plugin.hpp
src/api/.deps/: CanvasManagerPlugin_plg-CommunicativeObject.Po  CanvasManagerPlugin_plg-Plugin.Po  CanvasManagerPlugin_plg-StringUtils.Po  CommunicativeObject.Po  GtkMainWindowPlugin_plg-CommunicativeObject.Po  GtkMainWindowPlugin_plg-Plugin.Po  GtkTimelinePlugin_plg-CommunicativeObject.Po  GtkTimelinePlugin_plg-Plugin.Po  GtkTimelinePlugin_plg-StringUtils.Po  MainGUIPlugin_plg-CommunicativeObject.Po  MainGUIPlugin_plg-Plugin.Po  Plugin.Po  SFML_Gtkmm_EmbedPlugin_plg-CommunicativeObject.Po  StringUtils.Po  (+3 more)
src/core/: Application.cpp  Application.hpp  ConcretePluginManager.cpp
(+3 files in other folders)
