#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE(TestPlugin, 1.0, gwenael.pluchon@gmail.com)
AC_CONFIG_SRCDIR([src/TestPlugin.cpp])
AC_CONFIG_HEADERS([config.h])

CXXFLAGS=-g -Wall -pedantic

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CPP
AC_PROG_RANLIB


# Checks for libraries.
     
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
